css fix for cropping

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@
   -webkit-clip-path: polygon(0 5%, 0 95%, 5% 100%, 95% 100%, 100% 95%, 100% 5%, 95% 0, 5% 0);
   clip-path: polygon(0 5%, 0 95%, 5% 100%, 95% 100%, 100% 95%, 100% 5%, 95% 0, 5% 0);
   aspect-ratio: 8 / 6;
+  width: 100%;
   object-fit: cover;
 }
 
